--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="login-container">
-    <img src="css/js/1.png" alt="ALIF ERP" class="logo">
+    <img src="assets/css/js/1.png" alt="ALIF ERP" class="logo">
     <h2>Welcome Back, Teacher!</h2>
 
     <form id="loginForm">
