--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p class="footer-text">Powered by Alif Edu</p>
   </div>
 
-  <script src="css/js"></script>
+  <script src="js/login.js"></script>
 
 </body>
 </html>
