--- a/index.html
+++ b/index.html
@@ -1,27 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Alif ERP - Login</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <!-- Internal CSS -->
+    <style>
+        /* Style for the login form */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .login-container {
+            background-color: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+        }
+
+        h2 {
+            text-align: center;
+            color: #333;
+        }
+
+        .input-field {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .login-button {
+            width: 100%;
+            padding: 12px;
+            background-color: #007BFF;
+            border: none;
+            color: white;
+            font-size: 16px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .login-button:hover {
+            background-color: #0056b3;
+        }
+
+        .error-message {
+            color: red;
+            text-align: center;
+            display: none;
+        }
+    </style>
 </head>
+
 <body>
+    <div class="login-container">
+        <h2>Login</h2>
+        <form id="loginForm">
+            <input type="text" id="staffId" class="input-field" placeholder="Staff ID" required><br>
+            <input type="password" id="password" class="input-field" placeholder="Password" required><br>
+            <button type="submit" class="login-button">Login</button>
+            <div id="errorMessage" class="error-message">Invalid Staff ID or Password</div>
+        </form>
+    </div>
 
-  <div class="login-container">
-    <img src="1.png" alt="ALIF ERP" class="logo">
-    <h2>Welcome Back, Teacher!</h2>
+    <!-- Internal JavaScript -->
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', function (event) {
+            event.preventDefault(); // Prevent form submission
 
-    <form id="loginForm">
-      <input type="text" id="staffId" placeholder="Staff ID" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-    </form>
+            const staffId = document.getElementById('staffId').value;
+            const password = document.getElementById('password').value;
 
-    <p class="footer-text">Powered by Alif Edu</p>
-  </div>
+            // Create data object
+            const loginData = {
+                staffId: staffId,
+                password: password
+            };
 
-  <script src="js/login.js"></script>
-
+            // Fetch request to Google Apps Script Web App
+            fetch('https://script.google.com/macros/s/AKfycbzri07nVtHmuY4tbRc_c3tnOOf8szTJQRYDBVhDpCja/dev', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(loginData)
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        // Redirect to the dashboard
+                        window.location.href = 'dashboard.html';
+                    } else {
+                        // Show error message
+                        document.getElementById('errorMessage').style.display = 'block';
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    document.getElementById('errorMessage').textContent = 'An error occurred during login. Please try again.';
+                    document.getElementById('errorMessage').style.display = 'block';
+                });
+        });
+    </script>
 </body>
+
 </html>
