--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 
     <div class="login-container">
         <!-- Logo -->
-        <img src="path_to_your_logo.png" alt="Alif Edu Logo" class="logo">
-        <h2>Login</h2>
+        <img src="1.png" alt="Alif Edu Logo" class="logo">
+        <h2>TEACHER LOGIN</h2>
         <form id="loginForm">
             <input type="text" id="staffId" class="input-field" placeholder="Staff ID" required><br>
             <input type="password" id="password" class="input-field" placeholder="Password" required><br>
