--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <div class="login-container">
         <!-- Logo -->
-        <img src="path_to_your_logo.png" alt="Logo" class="logo">
+        <img src="1.png" alt="Logo" class="logo">
 
         <h2>Login to your account</h2>
         <form id="loginForm">
