--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     <div class="login-container">
         <!-- Logo -->
-        <img src="path_to_your_logo.png" alt="Logo" class="logo">
+        <img src="1.png" alt="Logo" class="logo">
 
         <!-- Heading -->
         <h2>Welcome Back! Log In to Your Dashboard</h2>
