--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         /* General body styling */
         body {
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(to right, #002F6C, #FFD700); /* Navy Blue to Golden Yellow gradient */
+            background-color: #002F6C; /* Navy Blue Background */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -43,7 +43,7 @@
 
         /* Heading styling */
         h2 {
-            color: #002F6C; /* Navy Blue color for heading */
+            color: #FFD700; /* Golden Yellow color for heading */
             font-size: 32px;
             margin-bottom: 20px;
             font-weight: 600;
@@ -73,9 +73,9 @@
         .login-button {
             width: 100%;
             padding: 14px;
-            background-color: #FFD700; /* Golden Yellow */
+            background-color: #FFD700; /* Golden Yellow Button */
             border: none;
-            color: #002F6C; /* Navy Blue */
+            color: #002F6C; /* Navy Blue Text */
             font-size: 18px;
             border-radius: 8px;
             cursor: pointer;
@@ -119,7 +119,7 @@
 
     <div class="login-container">
         <!-- Logo -->
-        <img src="1.png" alt="Logo" class="logo">
+        <img src="path_to_your_logo.png" alt="Logo" class="logo">
 
         <!-- Heading -->
         <h2>Welcome Back! Log In to Your Dashboard</h2>
