--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
 
     <div class="login-container">
         <!-- Logo -->
-        <img src="path_to_your_logo.png" alt="Logo" class="logo">
+        <img src="1o.png" alt="Logo" class="logo">
 
         <!-- Heading -->
-        <h2>Welcome Back! Log In to Your Dashboard</h2>
+        <h2>Welcome Back! Teacher</h2>
 
         <form id="loginForm">
             <input type="text" id="staffId" class="input-field" placeholder="Staff ID" required><br>
