--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         /* General body styling */
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Arial', sans-serif;
             background-color: #002F6C; /* Navy Blue Background */
             display: flex;
             justify-content: center;
@@ -22,10 +22,10 @@
         .login-container {
             background-color: #fff;
             padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
             width: 100%;
-            max-width: 380px;
+            max-width: 400px;
             text-align: center;
             box-sizing: border-box;
         }
@@ -34,38 +34,29 @@
         .logo {
             width: 150px;
             margin-bottom: 20px;
-            transition: transform 0.3s ease;
-        }
-
-        .logo:hover {
-            transform: rotate(360deg); /* Simple logo hover effect */
         }
 
         /* Heading styling */
         h2 {
-            color: #FFD700; /* Golden Yellow color for heading */
+            color: #FFD700; /* Golden Yellow color */
             font-size: 32px;
             margin-bottom: 20px;
-            font-weight: 600;
-            text-transform: uppercase;
-            letter-spacing: 1px;
+            font-weight: bold;
         }
 
         /* Input field styling */
         .input-field {
             width: 100%;
             padding: 14px;
-            margin: 15px 0;
-            border: 2px solid #ddd;
+            margin: 10px 0;
+            border: 1px solid #ddd;
             border-radius: 8px;
             font-size: 16px;
-            transition: 0.3s ease;
             background-color: #f9f9f9;
         }
 
         .input-field:focus {
-            border-color: #FFD700; /* Golden Yellow color for focus */
-            box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
+            border-color: #FFD700;
             background-color: #fff;
         }
 
@@ -84,7 +75,6 @@
 
         .login-button:hover {
             background-color: #FFA500; /* Darker golden for hover */
-            box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
         }
 
         .login-button:active {
@@ -95,7 +85,6 @@
         /* Error message styling */
         .error-message {
             color: #f44336;
-            text-align: center;
             display: none;
             margin-top: 10px;
             font-size: 14px;
@@ -119,10 +108,10 @@
 
     <div class="login-container">
         <!-- Logo -->
-        <img src="1o.png" alt="Logo" class="logo">
+        <img src="1.png" alt="Logo" class="logo">
 
         <!-- Heading -->
-        <h2>Welcome Back! Teacher</h2>
+        <h2>Welcome to Alif Edu</h2>
 
         <form id="loginForm">
             <input type="text" id="staffId" class="input-field" placeholder="Staff ID" required><br>
