--- a/index.html
+++ b/index.html
@@ -4,112 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <!-- Internal CSS -->
-    <style>
-        /* General body styling */
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #002F6C; /* Navy Blue Background */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
-            flex-direction: column;
-        }
-
-        /* Login container styling */
-        .login-container {
-            background-color: #fff;
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-            width: 100%;
-            max-width: 400px;
-            text-align: center;
-            box-sizing: border-box;
-            position: relative;
-        }
-
-        /* Heading styling */
-        h2 {
-            color: #FFD700; /* Golden Yellow */
-            font-size: 32px;
-            margin-bottom: 20px;
-            font-weight: bold;
-        }
-
-        /* Login text styling */
-        .welcome-text {
-            color: #002F6C; /* Navy Blue */
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        /* Input field styling */
-        .input-field {
-            width: 100%;
-            padding: 14px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            font-size: 16px;
-            background-color: #f9f9f9;
-        }
-
-        .input-field:focus {
-            border-color: #FFD700;
-            background-color: #fff;
-        }
-
-        /* Button styling */
-        .login-button {
-            width: 100%;
-            padding: 14px;
-            background-color: #FFD700; /* Golden Yellow Button */
-            border: none;
-            color: #002F6C; /* Navy Blue Text */
-            font-size: 18px;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .login-button:hover {
-            background-color: #FFA500; /* Darker golden for hover */
-        }
-
-        .login-button:active {
-            transform: translateY(2px);
-            box-shadow: none;
-        }
-
-        /* Footer with "Powered by Alif Edu" */
-        .footer-text {
-            font-size: 14px;
-            color: #777;
-            position: absolute;
-            bottom: 20px;
-            width: 100%;
-            text-align: center;
-        }
-
-        .footer-text a {
-            text-decoration: none;
-            color: #FFD700; /* Golden Yellow */
-        }
-
-        /* Error message styling */
-        .error-message {
-            color: #f44336;
-            display: none;
-            margin-top: 10px;
-            font-size: 14px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/login.css"> <!-- Linking CSS -->
 </head>
-
 <body>
 
     <div class="login-container">
@@ -129,45 +25,6 @@
         </div>
     </div>
 
-    <!-- Internal JavaScript -->
-    <script>
-        document.getElementById('loginForm').addEventListener('submit', function (event) {
-            event.preventDefault(); // Prevent form submission
-
-            const staffId = document.getElementById('staffId').value;
-            const password = document.getElementById('password').value;
-
-            // Create data object
-            const loginData = {
-                staffId: staffId,
-                password: password
-            };
-
-            // Fetch request to Google Apps Script Web App
-            fetch('https://script.google.com/macros/s/AKfycbzri07nVtHmuY4tbRc_c3tnOOf8szTJQRYDBVhDpCja/dev', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(loginData)
-            })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.success) {
-                        // Redirect to the dashboard
-                        window.location.href = 'dashboard.html';
-                    } else {
-                        // Show error message
-                        document.getElementById('errorMessage').style.display = 'block';
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    document.getElementById('errorMessage').textContent = 'An error occurred during login. Please try again.';
-                    document.getElementById('errorMessage').style.display = 'block';
-                });
-        });
-    </script>
-
+    <script src="scripts/login.js"></script> <!-- Linking JavaScript -->
 </body>
 </html>
