--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="styles/login.css"> <!-- Linking CSS -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Alif ERP - Login</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <div class="login-container">
-        <!-- Welcome message -->
-        <div class="welcome-text">Welcome back, Teacher!</div>
+  <div class="login-container">
+    <img src="1.png" alt="ALIF ERP" class="logo">
+    <h2>Welcome Back, Teacher!</h2>
 
-        <form id="loginForm">
-            <input type="text" id="staffId" class="input-field" placeholder="Staff ID" required><br>
-            <input type="password" id="password" class="input-field" placeholder="Password" required><br>
-            <button type="submit" class="login-button">Login</button>
-            <div id="errorMessage" class="error-message">Invalid Staff ID or Password</div>
-        </form>
+    <form id="loginForm">
+      <input type="text" id="staffId" placeholder="Staff ID" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <button type="submit">Login</button>
+    </form>
 
-        <!-- Footer with "Powered by Alif Edu" -->
-        <div class="footer-text">
-            <p>Powered by <a href="#">Alif Edu</a></p>
-        </div>
-    </div>
+    <p class="footer-text">Powered by Alif Edu</p>
+  </div>
 
-    <script src="scripts/login.js"></script> <!-- Linking JavaScript -->
+  <script src="js/login.js"></script>
+
 </body>
 </html>
