--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
 <div class="container">
     <nav class="sidebar">
         <div class="logo">
-            <img src="1.png" alt="Logo">
+            <img src="assets/logo.png" alt="Logo">
             <h2>ALIF ERP</h2>
         </div>
         <ul>
